--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "googleapis": "^26.0.1",
     "jsonwebtoken": "^8.1.1",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.5",
     "morgan": "^1.9.0",
-    "passport": "^0.4.0"
+    "nodemailer": "^4.4.2",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "passport": "^0.4.0",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
