--- a/package.json
+++ b/package.json
@@ -17,18 +17,27 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "del": "^3.0.0",
     "express": "^4.16.2",
     "googleapis": "^26.0.1",
     "jsonwebtoken": "^8.1.1",
+    "lokijs": "^1.5.2",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.5",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "nodemailer": "^4.4.2",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
     "xoauth2": "^1.2.0"
   },
   "devDependencies": {
-    "nodemon": "^1.14.12"
+    "@types/del": "^3.0.0",
+    "@types/express": "^4.11.1",
+    "@types/lokijs": "^1.5.1",
+    "@types/multer": "^1.3.6",
+    "nodemon": "^1.14.12",
+    "typescript": "^2.7.2"
   }
 }
