--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
   "author": "Everistus Olumese",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "del": "^3.0.0",
-    "express": "^4.16.2",
-    "googleapis": "^26.0.1",
-    "jsonwebtoken": "^8.1.1",
-    "lokijs": "^1.5.2",
-    "mongodb": "^3.0.2",
-    "mongoose": "^5.0.5",
-    "morgan": "^1.9.0",
-    "multer": "^1.3.0",
-    "nodemailer": "^4.4.2",
+    "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
+    "del": "^5.1.0",
+    "express": "^4.17.1",
+    "googleapis": "^44.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "lokijs": "^1.5.7",
+    "mongoose": "^5.7.5",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.3.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
+    "redis": "^2.8.0",
+    "socket.io": "^2.3.0",
     "xoauth2": "^1.2.0"
   },
   "devDependencies": {
