--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "del": "^5.1.0",
     "express": "^4.17.1",
+    "geoip-lite": "^1.3.8",
     "googleapis": "^44.0.0",
     "jsonwebtoken": "^8.5.1",
     "lokijs": "^1.5.7",
@@ -29,6 +30,7 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
     "redis": "^2.8.0",
+    "request-ip": "^2.1.3",
     "socket.io": "^2.3.0",
     "xoauth2": "^1.2.0"
   },
