--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redis": "^2.8.0",
     "request-ip": "^2.1.3",
     "socket.io": "^2.3.0",
+    "ua-parser": "^0.3.5",
     "xoauth2": "^1.2.0"
   },
   "devDependencies": {
